# unified-variational-attention

./: .gitignore  README.md  arithmetic_model.json  compact_uva_checkpoint.py  dialogue_web_ui.py  example_run.py  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  setup.py  tokenizer_model.json  tokenizer_zh.json  train_tokenizer_from_chunks.py
docs/: AUDIT_FINDINGS_AND_REMEDIATION.md
tests/: test_R_max_growth.py  test_arithmetic_inference.py  test_audit_dynamic_verification.py  test_audit_performance_and_hotspots.py  test_auto_feedback.py  test_auto_rest_tokenization.py  test_capacity_fatigue_effects.py  test_carry_borrow_precision.py  test_checkpoint_json.py  test_compact_json_stream.py  test_compact_uva_checkpoint.py  test_corpus_jsonl.py  test_dialogue.py  test_dialogue_autoload_resolve.py  test_dialogue_curiosity_injection.py  test_dialogue_idle_queue_timeout.py  test_dialogue_internal_idle.py  test_dialogue_preference.py  test_dialogue_training.py  test_dialogue_web_ui_import.py  test_example_run_audit.py  test_example_run_dialogue_save.py  test_hebbian_memory.py  test_interactive_calculator.py  test_model.py  test_persistence_and_calculator.py  test_precision_tokenizer.py  test_resource_self_regulation.py  test_tokenizer_chinese_no_space.py  test_tokenizer_incremental_training.py  test_tokenizer_persistence_and_interactive.py  test_tokenizer_stream_fit.py  test_word_imprints.py
uva_model/: __init__.py  _tokenizer_accel.pyx  arithmetic.py  auto_feedback.py  checkpoint_json.py  compact_json_stream.py  corpus_jsonl.py  curriculum.py  (+5 more)
